# sfmmm

./: .gitignore  .npmrc  CLAUDE.md  README.md  REFACTOR_TODOS.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  vite.config.js
.atomcode/skills/version-bump/: SKILL.md
.github/workflows/: release.yml
src/: App.jsx  index.css  version.js
src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs
src/components/: TitleBar.jsx  WelcomeScreen.jsx  index.js
src/components/common/: AsyncView.jsx  BackButton.jsx  ConfirmDialog.jsx  EmptyState.jsx  FileRow.jsx  FloatingActions.jsx  LoginForm.jsx  Pagination.jsx  ProfileDialog.jsx  ProgressModal.jsx  RichTextEditor.jsx
src/components/layout/: Header.jsx  TabNavigation.jsx  index.js
src/contexts/: AuthContext.jsx  NotificationContext.jsx  authHelpers.js  useAuth.js
src/hooks/: useFileSelection.js  useInstalledMods.js  usePersistUI.js
src/i18n/: index.js  languages.js
src/i18n/locales/: en.json  ja.json  zh.json
src/modules/: index.js
src/modules/importExport/: ImportExport.jsx  index.js
src/modules/missions/: MissionFolder.jsx  index.js
src/modules/mods/: ModList.jsx  index.js
src/modules/saves/: SaveManagement.jsx  index.js
src/modules/settings/: Acknowledgments.jsx  GameSettings.jsx  index.js
src/modules/workshop/: ApiTestTab.jsx  BrowseMods.jsx  (+10 more)
src/services/: dbHelper.js  imageApi.js  installMod.js  updateApi.js  workshopApi.js
src/utils/: avatars.js  externalLinks.js
