[package]
name = "app"
version = "0.1.46"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.1", features = [] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-http = { version = "2", features = ["native-tls"] }
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
mysql = "25"
sha2 = "0.10"
hex = "0.4"
tokio = { version = "1", features = ["full"] }
sevenz-rust = "0.6"
futures-util = "0.3"

[patch.crates-io]
tao = { git = "https://github.com/tauri-apps/tao.git", rev = "722aad90828c3091b3442b759a53782ae9a9c699" }
tray-icon = { git = "https://github.com/tauri-apps/tray-icon.git", tag = "tray-icon-v0.24.1" }
